# LOCA-bench

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  install.sh  pyproject.toml  remote_server_usage.md  tmp.sh
gem/client/: __init__.py  remote_env_client.py
gem/envs/: __init__.py
gem/server/: __init__.py  environment_session.py  (+1 more)
inference/: README.md  __init__.py  ana.sh  ana_all_configs.py  run.sh  run_claude_agent.py  run_claude_agent.sh  run_claude_agent_openrouter.sh  run_claude_api.py  run_claude_api.sh  run_react.py  run_react_remote.py  run_red.py  run_remote.sh
mcp_convert/: .mcp.json  PROJECT_STRUCTURE.md  README.md  pyproject.toml
mcp_convert/common/mcp/: server_base.py
mcp_convert/mcps/calendar/: database_utils.py  server.py
mcp_convert/mcps/canvas/: database_utils.py  server.py
mcp_convert/mcps/email/: database_utils.py  server.py
mcp_convert/mcps/google_cloud/: database_utils.py  demo_file_relationship.py  server.py  sqlite_backend.py
mcp_convert/mcps/google_sheet/: server.py
mcp_convert/mcps/snowflake/: database_utils.py  server.py
mcp_convert/mcps/woocommerce/: database_utils.py  order_generator.py  server.py
mcp_convert/simplified_yfinance_mcp/: __init__.py
scripts/: all_mcp_servers_config.json  extract_tool_schemas.py  mcp_tool_schemas.json
task-configs/: final_128k_set_config_multi_seed.json  final_256k_set_config_multi_seed.json  final_32k_set_config_multi_seed.json  final_64k_set_config_multi_seed.json  final_8k_set_config_multi_seed.json  final_96k_set_config_multi_seed.json
vis_traj/: script.js  server.py
(+119 files in other folders)
