[project]
name = "simplified-yfinance-mcp"
version = "1.0.0"
description = "A simplified YFinance MCP server using local files as database"
authors = [
    {name = "MCP Convert", email = "mcp@example.com"},
]
dependencies = [
    "mcp>=1.9.0",
    "pandas>=1.5.0",
]
requires-python = ">=3.12"

[project.scripts]
simplified-yfinance-mcp = "simplified_yfinance_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]